# pico2-trustzone-template

./: .gitignore  CMakeLists.txt  README.md  compile.sh  log
build_nonsecure/: .ninja_deps  .ninja_log  CMakeCache.txt  bs2_default.elf.map  build.ninja  cmake_install.cmake  compile_commands.json
build_nonsecure/drivers/rp2_common/pico_fix/: cmake_install.cmake
build_nonsecure/drivers/rp2_common/pico_fix/rp2040_usb_device_enumeration/: cmake_install.cmake
build_nonsecure/nonsecure/: cmake_install.cmake  nonsecure.elf
build_nonsecure/nonsecure/drivers/common/boot_picobin_headers/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/common/boot_picoboot_headers/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/common/hardware_claim/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/common/pico_base_headers/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/common/pico_binary_info/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/common/pico_stdlib_headers/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/common/pico_sync/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/common/pico_time/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/common/pico_util/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2350/boot_stage2/: bs2_default.dis  bs2_default_padded_checksummed.S  cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2350/hardware_regs/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2350/hardware_structs/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2350/pico_platform/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/boot_bootrom_headers/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/boot_uf2_headers/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/cmsis/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/hardware_base/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/hardware_boot_lock/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/hardware_clocks/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/hardware_dcp/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/hardware_divider/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/hardware_gpio/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/hardware_irq/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/hardware_pll/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/hardware_rcp/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/hardware_resets/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/hardware_sync/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/hardware_sync_spin_lock/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/hardware_ticks/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/hardware_timer/: cmake_install.cmake
build_nonsecure/nonsecure/drivers/rp2_common/hardware_uart/: cmake_install.cmake
build_nonsecure/nonsecure/pico-sdk/: cmake_install.cmake
build_nonsecure/tools/: cmake_install.cmake
build_secure/: .ninja_deps  .ninja_log  CMakeCache.txt  bs2_default.elf.map  build.ninja  cmake_install.cmake  compile_commands.json
build_secure/drivers/rp2_common/pico_fix/: cmake_install.cmake
build_secure/secure/: cmake_install.cmake  secure.elf
build_secure/secure/pico-sdk/: cmake_install.cmake
build_secure/tools/: cmake_install.cmake
cmake/: macros.cmake  rp2350-arm-s.cmake  rp2_common.cmake  source.cmake
drivers/boards/: pico.h
drivers/rp2350/boot_stage2/: CMakeLists.txt
drivers/rp2_common/pico_crt0/: crt0.S
env-setup/: README.md  docker_config.sh
env-setup/Docker-Ubuntu/: Dockerfile  docker-compose.yml
middleware/FreeRTOS/: CMakeLists.txt
middleware/FreeRTOS/Source/: tasks.c
middleware/FreeRTOS/Source/include/: FreeRTOSConfig.h  device_header_rp2.h
middleware/Zephyr/: CMakeLists.txt
nonsecure/: CMakeLists.txt  nonsecure.ld
nonsecure/app/: CMakeLists.txt  nonsecure.ld  prj.conf
nonsecure/app/src/: main.c
nonsecure/src/: interrupt_handlers.c  main_ns.c  syscalls.c
nsc/: nsc.h
pico-sdk/: CMakeLists.txt
pico-sdk/include/pico/: config_autogen.h  version.h
pico-sdk/include/pico/platform/: compiler.h  panic.h  sections.h
picotool/picotool/: picotool
picotool/picotool-build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  data_locs.cpp  install_manifest.txt
picotool/picotool-build/bintool/: cmake_install.cmake
picotool/picotool-build/boot_bootrom_headers/: cmake_install.cmake
picotool/picotool-build/boot_picobin_headers/: cmake_install.cmake
picotool/picotool-build/boot_picoboot_headers/: cmake_install.cmake
picotool/picotool-build/boot_uf2_headers/: cmake_install.cmake
picotool/picotool-build/elf/: cmake_install.cmake
picotool/picotool-build/elf2uf2/: cmake_install.cmake
picotool/picotool-build/errors/: cmake_install.cmake
picotool/picotool-build/lib/: cmake_install.cmake
picotool/picotool-build/lib/mbedtls/: cmake_install.cmake
picotool/picotool-build/lib/nlohmann_json/: cmake_install.cmake
picotool/picotool-build/lib/whereami/: cmake_install.cmake
picotool/picotool-build/pico_binary_info/: cmake_install.cmake
picotool/picotool-build/pico_platform/: cmake_install.cmake
picotool/picotool-build/pico_usb_reset_interface_headers/: cmake_install.cmake
picotool/picotool-build/picoboot_connection/: cmake_install.cmake
picotool/picotool-subbuild/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
picotool/picotool-subbuild/picotool-populate-prefix/tmp/: picotool-populate-gitclone.cmake  picotool-populate-gitupdate.cmake  picotool-populate-mkdirs.cmake
secure/: CMakeLists.txt  secure.ld
secure/include/: RTE_Components.h  _rp2350.h  secure_config.h
secure/src/: interrupt_handlers.c  main_s.c  nsc.c  secure_config.c
toolchain/: rp2350.cmake
(+120 files in other folders)
